--- a/_posts/2021-01-23-hello.md
+++ b/_posts/2021-01-23-hello.md
@@ -4,6 +4,7 @@ title: "Hello 👋"
 excerpt: "Just the very first post. The customary hello, world."
 date: 2021-01-01 20:00:00 +0800
 categories: general
+comments: false
 ---
 
 Hello all. This space was created on 23 Jan 2021, as a clean break from my old blogs on the internet.
